--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="admin-left" id="slidenav" >
          <div class="admin">
             <img src="profile .jpg">
-            <h1>sumaia akter </h1>
+            <h1>Sumaia akter </h1>
           <div class="tab">
               <div class="tablinks" id="defoultOpen">
                 <i class="fas fa-tachometer-alt"></i>
